@@ -1,5 +1,12 @@
 2011-04-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/i-coerce.boot, src/interp/debug.lisp,
+	src/interp/nrungo.boot, src/interp/bootlex.lisp,
+	src/interp/macros.lisp, src/interp/vmlisp.lisp:
+	Misc cleanups.
+
+2011-04-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/boot/ptyout.boot: Add source as comments to the
 	output of BOOTCLAM.
 
